--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "dotenv": "^16.3.1",
         "express": "^4.18.2",
         "express-async-handler": "^1.2.0",
+        "express-formidable": "^1.2.0",
         "formidable": "^3.5.1",
         "jsonwebtoken": "^9.0.2",
         "mongoose": "^8.0.3",
